--- a/Query String e Split/src/App.css
+++ b/Query String e Split/src/App.css
@@ -1,48 +1,3 @@
-.container {
-display: flex;
-justify-content: center;
-width: 100%;
-margin-top: 30px;
-
+body {
+    background: fafafa;
 }
-
-.container button {
-    padding: 40px;
-  }
-
-  .box {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .box img {
-    width: 500px;
-    height: 300px;
-  }
-  
-  .red{
-    display: flex;
-    justify-content: center;
-    width: 300px;
-    text-align: center;
-    background-color: red;
-  }
-  
-  .green{
-    width: 300px;
-    text-align: center;
-    background-color: green;
-  }
-  
-  .blue{
-    width: 300px;
-    text-align: center;
-    background-color: blue;
-  }
-  
-  .card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
